# monasca-statsd

./: .coveragerc  .gitignore  .gitreview  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  Rakefile  lower-constraints.txt  mkdocs.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
docs/: Makefile
docs/source/: conf.py  index.rst
monascastatsd/: __init__.py  client.py  common.py  connection.py  counter.py  gauge.py  histogram.py  metricbase.py  monasca_statsd.py  set.py  timer.py
releasenotes/notes/: drop-py-2-7-c9e3758f73d5cf29.yaml
statsd-generator/: README.md  generator.py
tests/: test_monascastatsd.py
tools/: tox_install.sh
