[metadata]
name = monasca-statsd
maintainer = monasca
maintainer_email = monasca@lists.launchpad.net
description-file = README.md
summary = Monasca statsd Python client
home-page = https://github.com/openstack/monasca-statsd
keywords=
    openstack
    monitoring
    statsd
license = Apache-2
include_package_data = True
test_suite = nose.collector
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Monitoring
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages =
    monascastatsd

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
autodoc_index_modules = True

[wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
