[metadata]
name = monasca-statsd
maintainer = monasca
maintainer_email = monasca@lists.launchpad.net
description-file = README.rst
summary = Monasca statsd Python client
home-page = https://opendev.org/openstack/monasca-statsd
keywords=
    openstack
    monitoring
    statsd
license = Apache-2
include_package_data = True
test_suite = nose.collector
python-requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Monitoring
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    monascastatsd

[pbr]
autodoc_index_modules = True

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
